--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,15 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_test?serverTimezone=Europe/Warsaw
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+org.sda.weather.weatherstack-api.api-key=232c98c893b2afb0d14fab7120c39397
+org.sda.weather.weatherstack-api.uri=http://api.weatherstack.com/current
+org.sda.weather.weatherstack-api.units=m
+org.sda.weather.weatherstack-api.lang=en
+
+org.sda.weather.openweathermap-api.api-key=00bb9cd9ad5f5584c0dbdfedfef9739f
+org.sda.weather.openweathermap-api.uri=http://api.openweathermap.org/data/2.5/weather
+org.sda.weather.openweathermap-api.units=metric
+org.sda.weather.openweathermap-api.lang=pl
