--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-org.sda.weather.openweathermap-api.appid=00bb9cd9ad5f5584c0dbdfedfef9739f
+com.sda.weather.openweathermap-api.appid=00bb9cd9ad5f5584c0dbdfedfef9739f
